--- a/htdocs/langs/en_US/cashdesk.lang
+++ b/htdocs/langs/en_US/cashdesk.lang
@@ -147,7 +147,7 @@ TerminalName=Terminal %s
 TerminalNameDesc=Terminal name
 DefaultPOSThirdLabel=TakePOS generic customer
 DefaultPOSCatLabel=Category for Point Of Sale products
-DefaultPOSProductLabel=Undefined product
+DefaultPOSProductLabel=Product example for TakePOS
 TakeposNeedsPayment=TakePOS needs a payment method to work, do you want to create the payment method 'Cash'?
 LineDiscount=Line discount
 LineDiscountShort=Line disc.
