Look and feel v19

--- a/htdocs/langs/en_US/cashdesk.lang
+++ b/htdocs/langs/en_US/cashdesk.lang
@@ -146,7 +146,7 @@ UsePriceHT=Use price excl. taxes and not price incl. taxes
 TerminalName=Terminal %s
 TerminalNameDesc=Terminal name
 DefaultPOSThirdLabel=TakePOS generic customer
-DefaultPOSCatLabel=Category for Point Of Sale products
+DefaultPOSCatLabel=Point Of Sale (POS) products
 DefaultPOSProductLabel=Product example for TakePOS
 TakeposNeedsPayment=TakePOS needs a payment method to work, do you want to create the payment method 'Cash'?
 LineDiscount=Line discount
