Updated string parameter placement

--- a/htdocs/langs/en_US/users.lang
+++ b/htdocs/langs/en_US/users.lang
@@ -109,9 +109,9 @@ ExpectedWorkedHours=Expected hours worked per week
 ColorUser=Color of the user
 DisabledInMonoUserMode=Disabled in maintenance mode
 UserAccountancyCode=User accounting code
-UserLogoff=User %s logout
-UserLogged=User %s logged
-UserLoginFailed=User login %s failed
+UserLogoff=User logout: %s
+UserLogged=User logged: %s
+UserLoginFailed=User login failed: %s
 DateOfEmployment=Employment date
 DateEmployment=Employment
 DateEmploymentStart=Employment Start Date
