--- a/htdocs/langs/en_US/recruitment.lang
+++ b/htdocs/langs/en_US/recruitment.lang
@@ -77,3 +77,5 @@ ExtrafieldsApplication=Complementary attributes (job applications)
 MakeOffer=Make an offer
 WeAreRecruiting=We are recruiting. This is a list of open positions to be filled...
 NoPositionOpen=No positions open at the moment
+ConfirmClose=Confirm cancelation
+ConfirmCloseAsk=Are you sure you want to cancel this recruitment candidature
