Qual cleaner code for InterfaceLogevents (#26347)
* Renamed text variable to label

* Added label variable

* Fixed typos

* Fixed PHPDoc

* Added runTrigger method return type

* Refactored to use super class constructor

* Added contributor details. Cleaned indentation.

* Added user login failed string

* Added label & description localized strings

* Converted event label, description & date variables to class properties. Added class method to initialize event data. Refactored & cleaned code.

* Added user string parameter

* Cleaned code

* Moved langs loading

* Added code comment

* Cleaned code

* Added code comment

* Fixed PHPDoc comments

* Refactored event label & description assignment

* Deleted unneeded empty lines

* Added event action text dictionary. Refactored event data initialization. Added static class method for dynamic localization to check if event text has an event action key n.

* Updated string parameter placement

* Added condition to check if event description has an event action key in order to do dynamic frontend translation

* Updated code comments. Renamed event action array.

* Added user status key

* Cleaned code

* Update interface_20_all_Logevents.class.php

---------

Co-authored-by: William Mead <william.mead@manchenumerique.fr>
Co-authored-by: Laurent Destailleur <eldy@destailleur.fr>

--- a/htdocs/langs/en_US/users.lang
+++ b/htdocs/langs/en_US/users.lang
@@ -109,8 +109,9 @@ ExpectedWorkedHours=Expected hours worked per week
 ColorUser=Color of the user
 DisabledInMonoUserMode=Disabled in maintenance mode
 UserAccountancyCode=User accounting code
-UserLogoff=User logout
-UserLogged=User logged
+UserLogoff=User logout: %s
+UserLogged=User logged: %s
+UserLoginFailed=User login failed: %s
 DateOfEmployment=Employment date
 DateEmployment=Employment
 DateEmploymentStart=Employment Start Date
@@ -131,3 +132,4 @@ ShowAllPerms=Show all permission rows
 HideAllPerms=Hide all permission rows
 UserPublicPageDesc=You can enable a virtual card for this user. An url with the user profile and a barcode will be available to allow anybody with a smartphone to scan it and add your contact to its address book.
 EnablePublicVirtualCard=Enable the user's virtual business card
+UserEnabledDisabled=User status changed: %s
