--- a/htdocs/langs/en_US/hrm.lang
+++ b/htdocs/langs/en_US/hrm.lang
@@ -67,8 +67,8 @@ MaxLevelLowerThanShort=Level lower than expected
 SkillNotAcquired=Skill not acquired by all users and requested by the second comparator
 legend=Legend
 TypeSkill=Skill type
-AddSkill=Add skills to job
-RequiredSkills=Required skills for this job
+AddSkill=Add skills to job profile
+RequiredSkills=Required skills for this job profile
 UserRank=User Rank
 SkillList=Skill list
 SaveRank=Save rank
