NEW add recursive deletion option for child m os (#26102)
* added recursive deletion option for child MOs + added recursive recovery method for child MOs

* add number of MOs in form_confirm

* update to delete number of mo childs if is null

* added checking of an infinity loop

* review PR

--- a/htdocs/langs/en_US/mrp.lang
+++ b/htdocs/langs/en_US/mrp.lang
@@ -37,6 +37,8 @@ ConfirmCancelMo=Are you sure you want to cancel this Manufacturing Order?
 DeleteMo=Delete Manufacturing Order
 ConfirmDeleteBillOfMaterials=Are you sure you want to delete this Bill Of Materials?
 ConfirmDeleteMo=Are you sure you want to delete this Manufacturing Order?
+DeleteMoChild = Delete the child OFs linked to this OF %s
+MoChildsDeleted = All child OFs have been deleted
 MenuMRP=Manufacturing Orders
 NewMO=New Manufacturing Order
 QtyToProduce=Qty to produce
