--- a/htdocs/langs/fr_FR/mrp.lang
+++ b/htdocs/langs/fr_FR/mrp.lang
@@ -37,6 +37,8 @@ ConfirmCancelMo=Êtes-vous sûr de vouloir annuler cet ordre de fabrication ?
 DeleteMo=Supprimer l'ordre de fabrication
 ConfirmDeleteBillOfMaterials=Êtes-vous sûr de vouloir supprimer cette nomenclature?
 ConfirmDeleteMo=Êtes-vous sûr de vouloir supprimer cet ordre de fabrication ?
+DeleteMoChild = Supprimer les OFs enfants liés à cet OF %s
+MoChildsDeleted = Tous les OFs enfants ont été supprimés
 MenuMRP=Ordres de fabrication
 NewMO=Nouvel Ordre de fabrication
 QtyToProduce=Quantité à produire
