trad menu left recruitment

--- a/htdocs/langs/fr_FR/recruitment.lang
+++ b/htdocs/langs/fr_FR/recruitment.lang
@@ -19,6 +19,7 @@
 
 # Module label 'ModuleRecruitmentName'
 ModuleRecruitmentName = Recrutement
+Recruitment = Recrutement
 # Module description 'ModuleRecruitmentDesc'
 ModuleRecruitmentDesc = Gestion et suivi des campagnes de recrutement
 
