--- a/htdocs/langs/fr_FR/hrm.lang
+++ b/htdocs/langs/fr_FR/hrm.lang
@@ -28,6 +28,9 @@ DateEval=Date d'évaluation
 JobCard=Fiche emploi
 JobPosition=Profil de poste
 JobsPosition=Profils de poste
+JobProfile = Profil de poste
+JobsProfiles = Profils de poste
+PositionsWithThisProfile = Postes avec ce profil d'emploi
 NewSkill=Nouvelle compétence
 SkillType=Type de compétence
 Skilldets=Liste des niveaux pour cette compétence
